--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
     background: url("http://www.designtos.com/postpic/2010/05/black-texture_169245.jpg");
     width: 100%;
     font-family: arial, 'helvetica neue', helvetica, sans-serif;
-    height: auto;
 }
 
 .header {
@@ -33,35 +32,35 @@ body {
     margin-bottom: 35px;
     background: white;
  }
-a:hover {
+navbar, a:hover {
     color: white;
     background: black;
 }
 
-a:focus {
+navbar, a:focus {
     color: rgb(13, 230, 96);
 
 }
-a:active {
+navbar, a:active {
     color: rgb(16, 3, 196);
 }
-a {
+navbar, a {
     text-decoration: none;
-}
+}   
+
 /* Portfolio container, Contact container and about me container starts here */
 .clearfix {
-    /* width: 960px; */
     margin: 0 auto;
     background: white;
     height: auto;
+    width: 960px;
 }
 .about-me, .contact, .portfolio {
-    margin: 0 auto;
-    /* margin-left: 25px; */
-    /* text-align: center; */
+    margin-top: 30px;
+    margin-left: 23px;
     font-size: 40px;
     color: #4aaaab;
-    padding: 5px 8px 5px 5px;
+    padding: 12px;
 }
 .image-wrapper {
     width: 960px;
@@ -80,9 +79,7 @@ a {
 .caption {
     margin: 0 auto;
 }
-/* .imageHolder {
-    margin: 8px;
-} */
+
 .imageHolder .caption {
     position: absolute;
     width: 150px;
@@ -96,27 +93,40 @@ a {
     opacity:0.7;
 }
 /* Horezental row statrts here */
+
 hr {
-    width: 960px;
+    width: 900px;
     padding: 5px;
     background: #4aaaab;
-    /* margin: 25px 25px 25px 25px ; */
-    margin: 0 auto;
+    margin-left: 30px; 
+    margin-right:30px;
+    margin-bottom: 20px;
 }
 /* Horizental row ends here */
 
 
 .card, .input {
-    margin: 8px;
-    margin: 8px;
+    margin: 0 auto;
     text-align: center;
     width: 960px;
 }
 
+.card-paragraph {
+    margin: 18px;
+    text-align: justify;
+
+}
+.card-image, img {
+    margin: 10px;
+}
+
 form {
     text-align: center;
-    width: 900px;
-    margin: 0 auto;
+    width: 960px;
+    margin: 10px;
+}
+button {
+    margin-bottom: 20px;
 }
 .clearfix:after {
     content: " ";
@@ -139,25 +149,26 @@ form {
 
 
 
-@media screen and (max-width: 600px) { 
+@media  (max-width: 900px) { 
  
-    body {
-      background-color: #333;
-    }
-    .image-wrapper {
-        width: 400px;
-        /* background-color: darkgray; */
-        height: 2000px;
-        
-    }
-    .imageHolder {
-        margin: 0 auto;
-        /* width: 250px; */
-        margin-bottom: 50px;
-    }
-    .header, .navbar {
-        width: 100%;
-    }
-  } 
-  
+    .header, .navbar, .footer {
+        width: 500px;
 
+    }
+    .about-me, .contact, .portfolio {
+        width: 500px;
+    }
+    .card, .card-caption {
+        width: 500px;
+    }
+    .card-image, .card-paragraph {
+        width: 500px;
+    }
+    hr {
+        width: 400px;
+    }
+    .clearfix {
+        width:500px;
+    }
+   
+}
